Project

General

Profile

Actions

Bug #8522

closed

r41264 causes "implicit conversion loses integer precision" on clang

Bug #8522: r41264 causes "implicit conversion loses integer precision" on clang

Added by drbrain (Eric Hodel) over 13 years ago. Updated over 13 years ago.

Status:
Closed
Target version:
[ruby-core:55467]

Description

=begin
compiling ../trunk/bignum.c
../trunk/bignum.c:1128:46: error: implicit conversion loses integer precision:
'unsigned long' to 'int' [-Werror,-Wshorten-64-to-32]
*nlp_bits_ret = num_bdigits * BITSPERDIG - num_bits;
~ ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
1 error generated.
make: *** [bignum.o] Error 1

=end


Files

bignum.c.bug8522.patch (1.92 KB) bignum.c.bug8522.patch drbrain (Eric Hodel), 06/13/2013 05:29 AM
Actions

Also available in: PDF Atom