* bignum.c (integer_unpack_num_bdigits_small): Fix a comple error on   clang -Werror,-Wshorten-64-to-32   Reported by Eric Hodel.  [ruby-core:55467] [Bug #8522]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@41267 b2dd03c8-39d4-4d8f-98ff-823fe69b080e